=================
Changes for Crate
=================

Unreleased
==========

 - Improved retry logic of EC2 unicast host discovery mechanism

 - Fixed a deadlock that could occur if queries with high offset or limit were
   executed concurrently

 - Upgraded Elasticsearch to 1.7.1
   This update changes the default value for delayed allocation of unassigned
   shards (see: `https://crate.io/docs/en/latest/configuration.html#unassigned`_).
   Also updated the upstream of EC2 discovery module

2015/08/06 0.50.3
=================

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table

 - Fixed an issue which could cause the blob recovery process to hang under some
   rare circumstances

 - Fixed an issue that caused ``COPY TO .. s3`` statements to leave the cluster
   in an inaccessible state

 - Fixed an issue that could cause a count function on partitioned tables
   to cause an error if a partition was deleted concurrently.


2015/07/29 0.51.0
=================

 - Added the ``KILL 'job_id'`` statement.

 - Fixed a bug with the kill of collectors when ``KILL ALL`` is called.

 - Added support for unicast host discovery via EC2 API

 - BREAKING CHANGE
   Connections to AWS S3 for ``COPY FROM`` and ``COPY TO`` are now using HTTPS.
   If you have previously blocked outgoing connections on ``443``, please update
   your firewall settings!

 - Improved handling of /_blobs REST URIs to prevent invalid URIs from being
   passed to main handler where they raise missleading error messages

 - Updated crate-admin to 0.14.2 which includes the following changes:

   - added support for line breaks in console result table

 - Added column policy as column to ``information_schema.tables`` table

 - Added SHOW CREATE TABLE statement to dump the schema of a user created table

 - Updated crash to 0.13.1 which contains following changes:

   - added multiline support for tabular output format
