@@ -273,8 +273,8 @@ public class SelectStatementAnalyzerTest extends BaseAnalyzerTest {
         List<String> outputNames = outputNames(analysis.relation());
         assertThat(outputNames.get(0), is("id"));
         assertThat(outputNames.get(1), is("id"));
-        assertThat(outputNames.size(), is(15));
-        assertThat(analysis.relation().querySpec().outputs().size(), is(15));
+        assertThat(outputNames.size(), is(16));
+        assertThat(analysis.relation().querySpec().outputs().size(), is(16));
     }
 
     @Test
